--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
-top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+title: Zhenyuan Ma's Homepage
+page-top-title: Zhenyuan Ma
+top-section-bg-text: P
+home-subtitle: Zhenyuan&ensp;|&ensp;马振远
+copyright-text: '&copy; Zhenyuan 2023-2025. All Rights Reserved.'
